--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
                         <img src="icons/logo.png" alt="logo">
                     </div>
                     <div class="firstscreen__header_two">
-                        <a href="#" class="firstscreen__header__link">Преимущества</a>
-                        <a href="#" class="firstscreen__header__link">Наша работа</a>
-                        <a href="#" class="firstscreen__header__link">Цены</a>
-                        <a href="#" class="firstscreen__header__link">Схема работы</a>
-                        <a href="#" class="firstscreen__header__link">Отзывы</a>
-                        <a href="#" class="firstscreen__header__link">Контакты</a>
+                        <a href="#advantages" class="firstscreen__header__link">Преимущества</a>
+                        <a href="#delivery" class="firstscreen__header__link">Наша работа</a>
+                        <a href="#prices" class="firstscreen__header__link">Цены</a>
+                        <a href="#scheme" class="firstscreen__header__link">Схема работы</a>
+                        <a href="#reviews" class="firstscreen__header__link">Отзывы</a>
+                        <a href="#questions" class="firstscreen__header__link">Контакты</a>
                     </div>
                     <div class="firstscreen__header_three">
                             <div class="firstscreen__header_three_text">
@@ -70,7 +70,7 @@
                         <p>Осуществляем прямые поставки с заводов от двери до двери</p>
                     </div>
                     <div class="firstscreen__services__option">
-                        <img class="firstscreen__services__option_shit" src="icons/icon4.png" alt="transporting_cargo">
+                        <img class="firstscreen__services__option_package" src="icons/icon4.png" alt="transporting_cargo">
                         <p>Экспресс доставка 1-2 дня из Гуан-<br>чжоу в Москву от 25$/кг</p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
         </div>
     </header>
 
-    <section class="advantages">
+    <section class="advantages" id="advantages">
         <div class="container">
             <h2 class="heading">
                 Преимущества работы с GlobalOpt
@@ -147,7 +147,7 @@
             </div>
         </div>
     </section>
-    <section class="deliverydescr">
+    <section class="deliverydescr" id="delivery">
         <div class="container">
             <h2 class="heading">
                 Наша работа - больше чем просто доставка
@@ -193,7 +193,7 @@
             </div>
         </div>
     </section>
-    <section class="prices">
+    <section class="prices" id="prices">
         <div class="container">
             <h2 class="heading">
                 Цены на любой вариант доставки
@@ -269,7 +269,7 @@
             </div>
         </div>
     </section>
-    <section class="scheme">
+    <section class="scheme" id="scheme">
         <h2 class="heading">
             Схема работы с нами
         </h2>
@@ -318,7 +318,7 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section class="reviews" id="reviews">
         <div class="reviews__header">
             <h2 class="heading">
                 Отзывы наших клиентов
@@ -373,7 +373,7 @@
             </div>
         </div>
     </section>
-    <section class="questions">
+    <section class="questions" id="questions">
         <div class="container">
             <div class="questions__window">
                 <div class="questions__window__header">
